<?xml version="1.0"?>
<package>
  <name>robotcraft2018_robot_description</name>
  <version>0.0.0</version>
  <description>robotcraft2018_robot_description provides a complete 3D model of the Robot of RobotCraft 2018 for simulation and visualization</description>
  <maintainer email="mryavuz61@gmail.com">Muhammed R. Yavuz</maintainer>  
  <license>TODO</license>
  <author email="mryavuz61@gmail.com">Muhammed R. Yavuz</author>  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>  
  <run_depend>urdf</run_depend>  
</package>



 
